--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "crossfit-wod-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "lint": "eslint --ignore-path .eslintignore src/** --ext .ts",
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(ts|json)\""
   },
   "author": "Evan Trujillo",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.0.3",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "express": "^4.18.2",
