--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "lint": "eslint --ignore-path .eslintignore src/** --ext .ts",
-    "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(ts|json)\""
+    "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(ts)\""
   },
   "author": "Evan Trujillo",
   "license": "ISC",
