--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Evan Trujillo",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -34,6 +35,7 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "typescript": "^5.3.3"
   }
