--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "typescript": "^5.3.3"
   }
 }
