--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Evan Trujillo",
   "license": "ISC",
   "devDependencies": {
+    "@types/apicache": "^1.6.6",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
@@ -36,6 +37,7 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
